--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@tensorflow-models/handpose": "^0.0.7",
     "@tensorflow/tfjs": "^3.19.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-webcam": "^7.0.1"
+    "react-webcam": "^7.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
